[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyredis"
version = "0.1.0"
description = "A from-scratch implementation of a Redis server in Python for educational purposes."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Networking",
]
dependencies = [
    # No runtime dependencies needed for your project
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black",         # For code formatting
    "watchexec",     # If you want to manage it via pip
]

[project.scripts]
pyredis-server = "pyredis.server:main"

[tool.setuptools]
packages = ["pyredis"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
